--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,19 +19,18 @@ requirements:
     - pip
     - python >=3.7
   run:
-    - matplotlib-base
-    - napari
-    - napari-plugin-engine >=0.1.4
-    - numpy
-    - python >=3.7
-    - qtpy
+    - matplotlib >=3.4.3
+    - napari >=0.4.12
+    - napari-plugin-engine >=0.2.0
+    - numpy >=1.21.4
+    - qtpy >=1.11.2
 
 test:
   imports:
     - napari_time_series_plotter
   commands:
     - pip list
-    - pip check
+    # - pip check
   requires:
     - pip
 
