--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,9 +17,10 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python >=3.8
+    - setuptools_scm
   run:
-    - python >=3.7
+    - python >=3.8
     - matplotlib-base >=3.4.3
     - napari >=0.4.12
     - napari-plugin-engine >=0.2.0
