--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ test:
   commands:
     - pip list
     # - pip check
-    - pytest --pyargs napari_time_series_plotter
+    - pytest --pyargs napari_time_series_plotter -v
   requires:
     - pip
     - napari
