--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,17 +13,19 @@ build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
   number: 0
+  script_env:
+    - QT_QPA_PLATFORM=offscreen
 
 requirements:
   host:
     - pip
     - python >=3.8
-    - setuptools_scm
+    - setuptools-scm
   run:
-    - python >=3.8
     - napari-matplotlib >=0.2.1
     - napari-plugin-engine >=0.2.0
     - numpy >=1.21.4
+    - python >=3.8
     - qtpy >=1.11.2
 
 test:
